db01-failling-1.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"mariadb:10.5-el7","namespace":"openshift"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mariadb\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: db01
      app.kubernetes.io/component: db01
      app.kubernetes.io/instance: db01
      app.kubernetes.io/name: mariadb
    name: db01
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: db01
    strategy: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: db01
      spec:
        containers:
        - image: ' '
          name: mariadb
          ports:
          - containerPort: 3306
            protocol: TCP
          resources: {}
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: db01
      app.kubernetes.io/component: db01
      app.kubernetes.io/instance: db01
      app.kubernetes.io/name: mariadb
    name: db01
  spec:
    ports:
    - name: 3306-tcp
      port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      deployment: db01
  status:
    loadBalancer: {}
kind: List
metadata: {}
