service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: podinfo
  name: podinfo
spec:
  ports:
  - port: 9898
    protocol: TCP
    targetPort: 9898
  selector:
    app: podinfo
status:
  loadBalancer: {}
